fixed font size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -3601,6 +3601,8 @@ form.well {
     padding-left: 20px;
     padding-right: 20px;
     background: #007785;
+    font-size: 13px;
+    line-height: 17px;
   }
   .navbar-fixed-top,
   .navbar-fixed-bottom {
