--- a/less/responsive-767px-max.less
+++ b/less/responsive-767px-max.less
@@ -75,6 +75,8 @@
     padding-left: 20px;
     padding-right: 20px;
 	background:#007785;
+	font-size:13px;
+	line-height:17px;
   }
   // Negative indent the now static "fixed" navbar
   .navbar-fixed-top,
@@ -153,7 +155,6 @@ section{
 	h2{font-size:20px;line-height:24px;}
 	p{font-size:12px;line-height:16px;margin:10px 0;}
 }
-@baseFontSize:          13px;
-@baseLineHeight:        26px;
+
 
 }
